--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,16 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+  intl: ^0.19.0
+  http: ^1.1.0
+  sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0+2
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  provider: ^6.0.5
   flutter:
     sdk: flutter
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
